--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -69,6 +69,13 @@
     <Compile Include="AbmRegimen\altaRegimen.Designer.cs">
       <DependentUpon>altaRegimen.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmRegimen\bajaRegimen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmRegimen\bajaRegimen.Designer.cs">
+      <DependentUpon>bajaRegimen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmRegimen\Regimenes.cs" />
     <Compile Include="AbmRol\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +141,9 @@
     </Compile>
     <EmbeddedResource Include="AbmRegimen\.Designer.resx">
       <DependentUpon>.Designer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmRegimen\bajaRegimen.resx">
+      <DependentUpon>bajaRegimen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
