--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -50,6 +50,18 @@
     <Compile Include="AbmCliente\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmHabitacion\abmHabitacionBotones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmHabitacion\abmHabitacionBotones.Designer.cs">
+      <DependentUpon>abmHabitacionBotones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmHabitacion\altaHabitacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmHabitacion\altaHabitacion.Designer.cs">
+      <DependentUpon>altaHabitacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="AbmRegimen\ABM_regimen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,26 +88,6 @@
     <Compile Include="AbmRol\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmHabitacion\abmHabitacion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmHabitacion\abmHabitacion.Designer.cs" />
-    <Compile Include="AbmHabitacion\darAltaHabitacion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmHabitacion\darAltaHabitacion.Designer.cs" />
-    <Compile Include="AbmHabitacion\darBajaHabitacion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmHabitacion\darBajaHabitacion.Designer.cs" />
-    <Compile Include="AbmHabitacion\modificarHabitacion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmHabitacion\modificarHabitacion.Designer.cs" />
-    <Compile Include="AbmHabitacion\modificarHabitacionElegida.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AbmHabitacion\modificarHabitacionElegida.Designer.cs" />
     <Compile Include="CancelarReserva\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,7 +131,6 @@
     <Compile Include="Login\View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modelo\TipoHabitacion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarConsumible\Form1.cs">
@@ -154,17 +145,18 @@
     <Compile Include="RegistrarEstadia\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AbmHabitacion\abmHabitacionBotones.resx">
+      <DependentUpon>abmHabitacionBotones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmHabitacion\altaHabitacion.resx">
+      <DependentUpon>altaHabitacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AbmRegimen\.Designer.resx">
       <DependentUpon>.Designer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmRegimen\bajaRegimen.resx">
       <DependentUpon>bajaRegimen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AbmHabitacion\abmHabitacion.resx" />
-    <EmbeddedResource Include="AbmHabitacion\darAltaHabitacion.resx" />
-    <EmbeddedResource Include="AbmHabitacion\darBajaHabitacion.resx" />
-    <EmbeddedResource Include="AbmHabitacion\modificarHabitacion.resx" />
-    <EmbeddedResource Include="AbmHabitacion\modificarHabitacionElegida.resx" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
