Reservas: Agrego archivos faltantes. Editar Habitacion: cree combo de nuevo

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -113,6 +113,30 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+     <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.Designer.cs">
+      <DependentUpon>IdentificarUsuarioExtendido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\ConfirmarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\ConfirmarReserva.Designer.cs">
+      <DependentUpon>ConfirmarReserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\IdentificarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\IdentificarUsuario.Designer.cs">
+      <DependentUpon>IdentificarUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\FormGenerarModificarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\FormGenerarModificarReserva.Designer.cs">
+      <DependentUpon>FormGenerarModificarReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListadoEstadistico\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
