--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-     <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.cs">
+    <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.Designer.cs">
@@ -161,6 +161,8 @@
     <Compile Include="Login\View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\Reserva.cs" />
+    <Compile Include="Modelo\TipoHabitacion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarConsumible\Form1.cs">
