desacoplo parcialmente la busqueda de los hoteles y habitaciones en el modelo de objetos para no tener todo en el form

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -75,6 +75,8 @@
     <Compile Include="AbmHabitacion\modificarHabitacion.Designer.cs">
       <DependentUpon>modificarHabitacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmHabitacion\MostrarHabitaciones.cs" />
+    <Compile Include="AbmHabitacion\MostrarHoteles.cs" />
     <Compile Include="AbmRegimen\ABM_regimen.cs">
       <SubType>Form</SubType>
     </Compile>
