--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GenerarModificacionReserva\GenerarReservaPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenerarModificacionReserva\GenerarReservaPrincipal.Designer.cs">
+      <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -217,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GenerarModificacionReserva\ConfirmarReserva.resx">
       <DependentUpon>ConfirmarReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GenerarModificacionReserva\GenerarReservaPrincipal.resx">
+      <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GenerarModificacionReserva\FormGenerarModificarReserva.resx">
       <DependentUpon>FormGenerarModificarReserva.cs</DependentUpon>
