--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -170,6 +170,8 @@
     <Compile Include="Login\View\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\TipoRegimen.cs" />
+    <Compile Include="Modelo\Hotel.cs" />
     <Compile Include="Modelo\Cliente.cs" />
     <Compile Include="Modelo\Habitacion.cs" />
     <Compile Include="Modelo\Reserva.cs" />
@@ -271,7 +273,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
