busqueda feliz funcionando

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -63,11 +63,22 @@
     <Compile Include="AbmHabitacion\altaHabitacion.Designer.cs">
       <DependentUpon>altaHabitacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmHabitacion\BuscarHabitacion.cs" />
+    <Compile Include="AbmHabitacion\BuscarHotel.cs" />
+    <Compile Include="AbmHabitacion\BuscarPiso.cs" />
+    <Compile Include="AbmHabitacion\Busqueda.cs" />
+    <Compile Include="AbmHabitacion\Consulta.cs" />
     <Compile Include="AbmHabitacion\darBajaHabitacion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AbmHabitacion\darBajaHabitacion.Designer.cs">
       <DependentUpon>darBajaHabitacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmHabitacion\modificarDatosHabitacioncs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmHabitacion\modificarDatosHabitacioncs.Designer.cs">
+      <DependentUpon>modificarDatosHabitacioncs.cs</DependentUpon>
     </Compile>
     <Compile Include="AbmHabitacion\modificarHabitacion.cs">
       <SubType>Form</SubType>
@@ -190,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHabitacion\darBajaHabitacion.resx">
       <DependentUpon>darBajaHabitacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmHabitacion\modificarDatosHabitacioncs.resx">
+      <DependentUpon>modificarDatosHabitacioncs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHabitacion\modificarHabitacion.resx">
       <DependentUpon>modificarHabitacion.cs</DependentUpon>
