busqueda en editar habitacion casi completa

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -74,6 +74,8 @@
     <Compile Include="AbmHabitacion\darBajaHabitacion.Designer.cs">
       <DependentUpon>darBajaHabitacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmHabitacion\ElementoForm.cs" />
+    <Compile Include="AbmHabitacion\ElementosForm.cs" />
     <Compile Include="AbmHabitacion\modificarDatosHabitacioncs.cs">
       <SubType>Form</SubType>
     </Compile>
