--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -102,6 +102,12 @@
     <Compile Include="AbmHotel\buscadorRegimenes.Designer.cs">
       <DependentUpon>buscadorRegimenes.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmHotel\modificarHotel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmHotel\modificarHotel.Designer.cs">
+      <DependentUpon>modificarHotel.cs</DependentUpon>
+    </Compile>
     <Compile Include="AbmHotel\pantallaPrincipalHotel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,6 +274,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHotel\buscadorRegimenes.resx">
       <DependentUpon>buscadorRegimenes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmHotel\modificarHotel.resx">
+      <DependentUpon>modificarHotel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHotel\pantallaPrincipalHotel.resx">
       <DependentUpon>pantallaPrincipalHotel.cs</DependentUpon>
