Cliente: Ya se puede dar de alta clientes

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -45,11 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbmCliente\Form1.cs">
+    <Compile Include="AbmCliente\ClienteFicha.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AbmCliente\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AbmCliente\ClienteFicha.Designer.cs">
+      <DependentUpon>ClienteFicha.cs</DependentUpon>
     </Compile>
     <Compile Include="AbmHabitacion\abmHabitacionBotones.cs">
       <SubType>Form</SubType>
@@ -302,6 +302,9 @@
     <Compile Include="Roles\Modelo\RolPermiso.cs" />
     <Compile Include="Tools\RegexUtilities.cs" />
     <Compile Include="Tools\Option.cs" />
+    <EmbeddedResource Include="AbmCliente\ClienteFicha.resx">
+      <DependentUpon>ClienteFicha.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AbmHabitacion\abmHabitacionBotones.resx">
       <DependentUpon>abmHabitacionBotones.cs</DependentUpon>
     </EmbeddedResource>
