subo app.config

--- a/FrbaHotel/App.config
+++ b/FrbaHotel/App.config
@@ -11,6 +11,6 @@
     </startup>
   <appSettings>
     <add key="formatoFechaSistema" value="es-AR" />
-    <add key="fechaSistema" value="06/07/2018" />
+    <add key="fechaSistema" value="07-08-2018" />
   </appSettings>
 </configuration>
