ABM cliente: modif del cs proj

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -51,6 +51,12 @@
     <Compile Include="AbmCliente\ClienteFicha.Designer.cs">
       <DependentUpon>ClienteFicha.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmCliente\frmClientesListado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmCliente\frmClientesListado.Designer.cs">
+      <DependentUpon>frmClientesListado.cs</DependentUpon>
+    </Compile>
     <Compile Include="AbmHabitacion\abmHabitacionBotones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -325,6 +331,9 @@
     <Compile Include="Tools\Option.cs" />
     <EmbeddedResource Include="AbmCliente\ClienteFicha.resx">
       <DependentUpon>ClienteFicha.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmCliente\frmClientesListado.resx">
+      <DependentUpon>frmClientesListado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHabitacion\abmHabitacionBotones.resx">
       <DependentUpon>abmHabitacionBotones.cs</DependentUpon>
