--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Roles\Modelo\Roles.cs" />
     <Compile Include="Roles\Modelo\RolesPermisos.cs" />
     <Compile Include="Roles\Modelo\RolPermiso.cs" />
+    <Compile Include="Tools\DBInterface.cs" />
     <Compile Include="Tools\RegexUtilities.cs" />
     <Compile Include="Tools\Option.cs" />
     <EmbeddedResource Include="AbmCliente\ClienteFicha.resx">
