--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -32,6 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -45,16 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbmCliente\ClienteFicha.cs">
+    <Compile Include="Clientes\frmClientesFicha.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AbmCliente\ClienteFicha.Designer.cs">
-      <DependentUpon>ClienteFicha.cs</DependentUpon>
+    <Compile Include="Clientes\frmClientesFicha.Designer.cs">
+      <DependentUpon>frmClientesFicha.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmCliente\frmClientesListado.cs">
+    <Compile Include="Clientes\frmClientesListado.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AbmCliente\frmClientesListado.Designer.cs">
+    <Compile Include="Clientes\frmClientesListado.Designer.cs">
       <DependentUpon>frmClientesListado.cs</DependentUpon>
     </Compile>
     <Compile Include="AbmHabitacion\abmHabitacionBotones.cs">
@@ -297,10 +299,10 @@
     <Compile Include="Tools\RegexUtilities.cs" />
     <Compile Include="Tools\Option.cs" />
     <Compile Include="Tools\Sesion.cs" />
-    <EmbeddedResource Include="AbmCliente\ClienteFicha.resx">
-      <DependentUpon>ClienteFicha.cs</DependentUpon>
+    <EmbeddedResource Include="Clientes\frmClientesFicha.resx">
+      <DependentUpon>frmClientesFicha.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AbmCliente\frmClientesListado.resx">
+    <EmbeddedResource Include="Clientes\frmClientesListado.resx">
       <DependentUpon>frmClientesListado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmHabitacion\abmHabitacionBotones.resx">
