--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -153,24 +153,6 @@
     <Compile Include="Bienvenido.Designer.cs">
       <DependentUpon>Bienvenido.cs</DependentUpon>
     </Compile>
-    <Compile Include="GenerarModificacionReserva\frmMotivoCancelacion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\frmMotivoCancelacion.Designer.cs">
-      <DependentUpon>frmMotivoCancelacion.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\MenuCRUDReserva.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\MenuCRUDReserva.Designer.cs">
-      <DependentUpon>MenuCRUDReserva.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\ModificarCancelarReserva.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\ModificarCancelarReserva.Designer.cs">
-      <DependentUpon>ModificarCancelarReserva.cs</DependentUpon>
-    </Compile>
     <Compile Include="Login\frmSeleccionHotel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,6 +176,60 @@
     <Compile Include="Login\Modelo\Usuarios.cs" />
     <Compile Include="Login\Modelo\UsuariosRoles.cs" />
     <Compile Include="Modelo\Usuario.cs" />
+    <Compile Include="Reservas\ConfirmarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\ConfirmarReserva.Designer.cs" >
+      <DependentUpon>ConfirmarReserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\Form1.Designer.cs" >
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\FormSeleccionarHabitaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\FormSeleccionarHabitaciones.Designer.cs" >
+      <DependentUpon>FormSeleccionarHabitaciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\frmMotivoCancelacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\frmMotivoCancelacion.Designer.cs" >
+      <DependentUpon>frmMotivoCancelacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\GenerarReservaPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\GenerarReservaPrincipal.Designer.cs" >
+      <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\IdentificarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\IdentificarUsuario.Designer.cs" >
+      <DependentUpon>IdentificarUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\IdentificarUsuarioExtendido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\IdentificarUsuarioExtendido.Designer.cs" >
+      <DependentUpon>IdentificarUsuarioExtendido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\MenuGenerarModificarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\MenuGenerarModificarReserva.Designer.cs" >
+         <DependentUpon>MenuGenerarModificarReserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas\ModificarCancelarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas\ModificarCancelarReserva.Designer.cs" >
+      <DependentUpon>ModificarCancelarReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="Roles\frmRolesFicha.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -213,36 +249,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="ConexionSQL.cs" />
-    <Compile Include="GenerarModificacionReserva\GenerarReservaPrincipal.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\GenerarReservaPrincipal.Designer.cs">
-      <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.Designer.cs">
-      <DependentUpon>IdentificarUsuarioExtendido.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\ConfirmarReserva.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\ConfirmarReserva.Designer.cs">
-      <DependentUpon>ConfirmarReserva.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\IdentificarUsuario.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\IdentificarUsuario.Designer.cs">
-      <DependentUpon>IdentificarUsuario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\FormGenerarModificarReserva.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GenerarModificacionReserva\FormGenerarModificarReserva.Designer.cs">
-      <DependentUpon>FormGenerarModificarReserva.cs</DependentUpon>
-    </Compile>
     <Compile Include="ListadoEstadistico\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -345,30 +351,6 @@
     <EmbeddedResource Include="Bienvenido.resx">
       <DependentUpon>Bienvenido.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\ConfirmarReserva.resx">
-      <DependentUpon>ConfirmarReserva.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\frmMotivoCancelacion.resx">
-      <DependentUpon>frmMotivoCancelacion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\MenuCRUDReserva.resx">
-      <DependentUpon>MenuCRUDReserva.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\GenerarReservaPrincipal.resx">
-      <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\FormGenerarModificarReserva.resx">
-      <DependentUpon>FormGenerarModificarReserva.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\IdentificarUsuario.resx">
-      <DependentUpon>IdentificarUsuario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\IdentificarUsuarioExtendido.resx">
-      <DependentUpon>IdentificarUsuarioExtendido.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GenerarModificacionReserva\ModificarCancelarReserva.resx">
-      <DependentUpon>ModificarCancelarReserva.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -395,6 +377,33 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegistrarEstadia\RegistrarEstadia.resx">
       <DependentUpon>RegistrarEstadia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\ConfirmarReserva.resx" >
+      <DependentUpon>ConfirmarReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\Form1.resx" >
+    <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\FormSeleccionarHabitaciones.resx" >
+    <DependentUpon>FormSeleccionarHabitaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\frmMotivoCancelacion.resx" >
+    <DependentUpon>frmMotivoCancelacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\GenerarReservaPrincipal.resx" >
+    <DependentUpon>GenerarReservaPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\IdentificarUsuario.resx" >
+    <DependentUpon>IdentificarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\IdentificarUsuarioExtendido.resx" >
+    <DependentUpon>IdentificarUsuarioExtendido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\MenuGenerarModificarReserva.resx" >
+    <DependentUpon>MenuGenerarModificarReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\ModificarCancelarReserva.resx" >
+    <DependentUpon>ModificarCancelarReserva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Roles\frmRolesFicha.resx">
       <DependentUpon>frmRolesFicha.cs</DependentUpon>
